data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2399.wast
;; 9. **Test 9: Incorrect Default Label in Function Call**    - Description: Invoke `br_table` within a function when the stack is unexpectedly empty, forcing a branch to the default label, and check for consistency.    - Constraint Checked: Default label handling and stack state management.    - Improper Function Call or Return Handling: Ensuring the default branch label is correctly applied when an unexpected stack state occurs.

(assert_invalid
  (module
    (func $test
      (block
        (block
          (br_table 0 (i32.const 42))
        )
      )
    )
  )
  "unknown label"
)